<resources>
    <string name="app_name">Tetris</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">New Game</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="exit">Exit</string>

    <string name="level_title">Select Game Level</string>
    <string-array name="levels_array">
        <item>Basic</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string name="upgrade_title">You are Upgraded</string>
    <string name="upgrade_message">Congratulations! You are upgraded to %1$s level.</string>

    <string name="rotateLeft">\u21ba</string>
    <string name="rotateRight">\u21bb</string>
    <string name="down">\u2193</string>
    <string name="left">\u2190</string>
    <string name="right">\u2192</string>

    <string name="game_over_title">Game Over</string>
    <string name="game_over_message">Your score: %1$d</string>
    <string name="game_over_created_record">You just created a new record!</string>
    <string name="game_over_leveled_record">Your score leveled the best record!</string>
    <string name="game_over_second_highest">Your score is the second highest score.</string>
    <string name="game_over_third_highest">Your score is third highest score.</string>


</resources>
